--- a/modules/users/client/views/profile/profile-view-basics.client.view.html
+++ b/modules/users/client/views/profile/profile-view-basics.client.view.html
@@ -7,3 +7,8 @@
   ng-if="::app.user._id !== profileCtrl.profile._id"
   username="::profileCtrl.profile.username"
 ></report-member-link>
+<br>
+<block-member-link
+  ng-if="::app.user._id !== profileCtrl.profile._id"
+  username="::profileCtrl.profile.username"
+></block-member-link>
